# chess-board

./: README.md  chess-board.ipynb  demo.ipynb  pyproject.toml
